@@ -29,6 +29,7 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* Dimensions can now be specified when loading SVG files
 	* SVG files now can be loaded through 'rsvg-convert', in absence of GTK+2 librsvg plugin
 	* Animation cycles can now specify sequence steps as containing several layers, or none : See handbook section 9.3.3 for details
+	* Image loading and new image creation are now undoable by default
 	* Committing paste when changing tool is now enabled by default
 	* Saving an image now commits paste if auto commit mode is enabled
 	* "Scale canvas" and "Resize canvas" now remember their aspect ratio toggle setting
